--- a/Changes
+++ b/Changes
@@ -1,5 +1,3 @@
-Revision history for Math::Primality
+Math::Primality Release Summaries
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
 
