--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
-Math::Primality Release Summaries
+=head 1 Math::Primality Release Summaries
 
+=head2 0.02
+
+ stuff
+
+=head2 0.01 - Initial Release
+
+ is_pseudoprime() and is_strong_pseudoprime() implemented
 
