--- a/Changes
+++ b/Changes
@@ -1,8 +1,22 @@
 =head1 Math::Primality Release Summaries
 
+=head2 0.03
+
+=head3 0.03_02
+
+ optimizations and code cleanup
+
+=head3 0.03_01
+
+ is_prime(), next_prime(), prev_prime() and prime_count()
+
+=head3 0.03_00
+
+ is_strong_lucas_pseudoprime() implemented
+
 =head2 0.02
 
- stuff
+ documentation and house keeping cleanups
 
 =head2 0.01 - Initial Release
 
