--- a/Changes
+++ b/Changes
@@ -1,6 +1,14 @@
 =head1 Math::Primality Release Summaries
 
+=head2 0.04
+
+ a version for everyone!
+
 =head2 0.03
+
+=head3 0.03_03
+
+ documentation
 
 =head3 0.03_02
 
